--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "lib-flexible": "^0.3.2",
+    "vant": "^2.12.54",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -25,6 +29,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss-pxtorem": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
