--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "cropperjs": "^1.5.13",
+    "dayjs": "^1.11.8",
+    "json-bigint": "^1.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lib-flexible": "^0.3.2",
+    "lodash": "^4.17.21",
+    "socket.io-client": "^4.7.1",
     "vant": "^2.12.54",
     "vue": "^2.6.14",
+    "vue-cropper": "^0.6.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -26,11 +32,12 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss-pxtorem": "^6.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack-dev-server": "^4.15.1"
   },
   "eslintConfig": {
     "root": true,
@@ -38,13 +45,12 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommended",
       "eslint:recommended"
     ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
+    }
   },
   "browserslist": [
     "> 1%",
